LayoutFix patch from Sascha Rodekamp related to "Allow to open a layer lookup from a layer lookup" (https://issues.apache.org/jira/browse/OFBIZ-3446) - OFBIZ-3446
Lookups that were opened from lookups had layout bugs in buttons (shows the lookup image, certainly introduced by r932619) and links (color).
    *  flat grey
          o next-last buttons (only in "lookup in lookup" it seems)
          o blue color on links in the returned list, and on some buttons too (submit)

    * dropping crumbs, blue light, bizzness time
          o color on links in the returned list, and on some buttons too (find, submit, ...?)



git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@933586 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -1495,22 +1495,25 @@ Lookups
  }
 
 /* overwrite */
- #fieldLookupContent ul li a{
-     display: inherit;
-     padding: 2px 3px 2px 3px;
-     margin: 0;
-     cursor: pointer;
-     height: 16;
-     width: 16;
-     background: url(/images/fieldlookup.gif) no-repeat;     
+ #fieldLookupContent ul li a {
+    display: inherit;
+    cursor: pointer;
  }
 
-/* overwrite*/
- #fieldLookupContent a{
-     display: inherit;
-     cursor: pointer;
-     background: url(/images/fieldlookup.gif) no-repeat;     
+ #fieldLookupContent td {
+    padding-top: 5px;
+    padding-bottom: 5px;
  }
+
+ #fieldLookupContent td ul li a {
+    background: url(/images/fieldlookup.gif) no-repeat;
+ }
+
+ #fieldLookupContent td a {
+    cursor: pointer;
+    padding: 0.4em 0.6em;
+    display: inline;
+    }
 
 /* overwrite*/
  #findScreenlet{
