--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
@@ -2220,18 +2220,25 @@ Lookups
  }
 
 /* overwrite */
- #fieldLookupContent ul li a{
-     display: inherit;
-     padding: 2px 3px 2px 3px;
-     margin: 0;
+ #fieldLookupContent ul li a {
+    display: inherit;
      cursor: pointer;
-     background: url(/images/fieldlookup.gif) no-repeat;
  }
 
- #fieldLookupContent td a{
-     display: inherit;
-     cursor: pointer;
-     background: url(/images/fieldlookup.gif) no-repeat;
+ #fieldLookupContent td {
+    padding-top: 5px;
+    padding-bottom: 5px;
+ }
+
+ #fieldLookupContent td ul li a {
+    background: url(/images/fieldlookup.gif) no-repeat;
+ }
+
+ #fieldLookupContent td a {
+    background: none;
+    cursor: pointer;
+    padding: 0.4em 0.6em;
+    display: inline;
  }
 
 /* overwrite*/
